@@ -23,4 +23,10 @@ Changelog of all the versions of AndroidStatus
  * improved error handling
  * update the screen after changing preferences
  * use styles with the layout for consistent look and easier to update values
+ * add in ability to label relay ports
+ * moved labels to own preference screen: controller & relay labels
+ * moved visibility to own preferences screen
+ * display relay status information
+ * allow for toggling relay port status
+ * option to query all labels from ra.com using web banner id entered (does not download values yet)
  
